--- a/biblatex-examples.bib
+++ b/biblatex-examples.bib
@@ -7,3 +7,77 @@
   year={2011},
   publisher={Citeseer}
 }
+
+@article{adedoyin2018quantum,
+  title={Quantum algorithm implementations for beginners},
+  author={Adedoyin, Adetokunbo and Ambrosiano, John and Anisimov, Petr and Casper, William and Chennupati, Gopinath and Coffrin, Carleton and Djidjev, Hristo and Gunter, David and Karra, Satish and Lemons, Nathan and others},
+  journal={arXiv preprint arXiv:1804.03719},
+  year={2018}
+}
+
+@article{moore:1965,
+  added-at = {2009-01-04T17:09:31.000+0100},
+  author = {Moore, Gordon E.},
+  biburl = {https://www.bibsonomy.org/bibtex/2867f7a1c71867074780e958c5cec38e4/lysander07},
+  interhash = {886de6a8be647a56cc3de71d50149f5e},
+  intrahash = {867f7a1c71867074780e958c5cec38e4},
+  journal = {Electronics},
+  keywords = {www01 wwwbuch wwwkap1},
+  month = {April},
+  number = 8,
+  timestamp = {2009-01-27T15:24:50.000+0100},
+  title = {Cramming more components onto integrated circuits},
+  volume = 38,
+  year = 1965
+}
+
+@INPROCEEDINGS{shor,
+  author={Shor, P.W.},
+  booktitle={Proceedings 35th Annual Symposium on Foundations of Computer Science}, 
+  title={Algorithms for quantum computation: discrete logarithms and factoring}, 
+  year={1994},
+  volume={},
+  number={},
+  pages={124-134},
+  doi={10.1109/SFCS.1994.365700}}
+
+@misc{grover1996fast,
+      title={A fast quantum mechanical algorithm for database search}, 
+      author={Lov K. Grover},
+      year={1996},
+      eprint={quant-ph/9605043},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph}
+}
+
+@article{rsa,
+  title={A method for obtaining digital signatures and public-key cryptosystems},
+  author={Rivest, Ronald L. and Shamir, Adi and Adleman, Leonard},
+  journal={Communications of the ACM},
+  volume={26},
+  number={1},
+  pages={96--99},
+  year={1983},
+  publisher={ACM New York, NY, USA}
+}
+
+@misc{roadmap,
+  title = {The IBM Quantum Development Roadmap},
+  howpublished = {\url{https://www.ibm.com/quantum/roadmap}},
+  note = {Accessed: 2023-02-07}
+}
+
+@article{feynman2018simulating,
+  title={Simulating physics with computers},
+  author={Feynman, Richard P and others},
+  journal={Int. j. Theor. phys},
+  volume={21},
+  number={6/7},
+  year={2018}
+}
+
+@misc{nobel,
+  title = {NOBEL PRIZES 2022},
+  howpublished = {\url{https://www.nobelprize.org/all-nobel-prizes-2022/}},
+  note = {Accessed: 2023-02-07}
+}
