--- a/biblatex-examples.bib
+++ b/biblatex-examples.bib
@@ -15,22 +15,6 @@
   year={2018}
 }
 
-@article{moore:1965,
-  added-at = {2009-01-04T17:09:31.000+0100},
-  author = {Moore, Gordon E.},
-  biburl = {https://www.bibsonomy.org/bibtex/2867f7a1c71867074780e958c5cec38e4/lysander07},
-  interhash = {886de6a8be647a56cc3de71d50149f5e},
-  intrahash = {867f7a1c71867074780e958c5cec38e4},
-  journal = {Electronics},
-  keywords = {www01 wwwbuch wwwkap1},
-  month = {April},
-  number = 8,
-  timestamp = {2009-01-27T15:24:50.000+0100},
-  title = {Cramming more components onto integrated circuits},
-  volume = 38,
-  year = 1965
-}
-
 @INPROCEEDINGS{shor,
   author={Shor, P.W.},
   booktitle={Proceedings 35th Annual Symposium on Foundations of Computer Science}, 
@@ -64,7 +48,8 @@
 @misc{roadmap,
   title = {The IBM Quantum Development Roadmap},
   howpublished = {\url{https://www.ibm.com/quantum/roadmap}},
-  note = {Accessed: 2023-02-07}
+  note = {Accessed: 2023-02-07},
+    year={2023}
 }
 
 @article{feynman2018simulating,
@@ -79,5 +64,43 @@
 @misc{nobel,
   title = {NOBEL PRIZES 2022},
   howpublished = {\url{https://www.nobelprize.org/all-nobel-prizes-2022/}},
-  note = {Accessed: 2023-02-07}
+  note = {Accessed: 2023-02-07},
+    year={2022}
+}
+
+@misc{qc_grover,
+      title={QUANTUM COMPUTING 7.}, 
+      author={Jozef Gruska},
+      year={2020},
+      howpublished = {\url{https://www.fi.muni.cz/usr/gruska/quantum20/qc2007.pdf}},
+      note = {Accessed: 2023-03-08}
+}
+
+@misc{qc_grover_microsoft,
+  title = {Theory of Grover's search algorithm},
+  howpublished = {\url{https://learn.microsoft.com/en-us/azure/quantum/concepts-grovers}},
+  note = {Accessed: 2023-03-08},
+    year={2023}
+}
+
+@article{moore:1965,
+  added-at = {2009-01-04T17:09:31.000+0100},
+  author = {Moore, Gordon E.},
+  biburl = {https://www.bibsonomy.org/bibtex/2867f7a1c71867074780e958c5cec38e4/lysander07},
+  interhash = {886de6a8be647a56cc3de71d50149f5e},
+  intrahash = {867f7a1c71867074780e958c5cec38e4},
+  journal = {Electronics},
+  keywords = {www01 wwwbuch wwwkap1},
+  month = {April},
+  number = 8,
+  timestamp = {2009-01-27T15:24:50.000+0100},
+  title = {Cramming more components onto integrated circuits},
+  volume = 38,
+  year = 1965
+}
+@misc{qc_grover_ibm,
+  title = {Theory of Grover's search algorithm with small sudoku example},
+  howpublished = {\url{https://learn.qiskit.org/course/ch-algorithms/grovers-algorithm}},
+  note = {Accessed: 2023-15-10},
+    year={2023}
 }
